Fix nav hover underline vertical position to align with text

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -259,7 +259,7 @@ p {
 .nav-link::after {
   content: '';
   position: absolute;
-  bottom: -1px;
+  bottom: 13px;
   left: 0;
   width: 0;
   height: 1px;
